--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 
 default: &default
     docker:
-      - image: circleci/node:8.10
+      - image: circleci/node:8.9.4-stretch
 installation_dependency: &installation_dependency
         name: Install Serverless and AWS CLI
         command: |
