--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,12 +75,14 @@ workflows:
     jobs:
       # Development builds are executed on "develop" branch only.
       - "build-dev":
+          context : org-global      
           filters:
             branches:
               only: 
                 - develop
       # production builds are executed on "master" branch only.
       - "build-prod":
+          context : org-global      
           filters:
             branches:
               only:
